# src/routes/news.route.js
@@ -7,10 +7,10 @@ const router = Router()
 import { create, findAll, topNews, findById, searchByTitle, byUser, update, erase, likeNews, addComment, deleteComment } from "../controllers/news.controller.js"
 import { authmiddleware } from '../middlewares/auth.middlewaers.js'
 
-router.post("/", authmiddleware, create)//testando
-router.get("/", findAll)
-router.get("/top", topNews)
-router.get("/search", searchByTitle)
+router.post("/", authmiddleware, create)
+router.get("/", findAll)//testado!!
+router.get("/top", topNews)//testado!!
+router.get("/search", searchByTitle)//testado!!
 router.get("/byUser", authmiddleware, byUser)
 router.get("/:id", authmiddleware, findById)
 router.patch("/:id", authmiddleware, update)
